# europe-historical-geojson

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  germany-1914-boundaries.geojson  mappe-1914.yaml  mappe-1915.yaml  mappe.py  mappe.yaml  poland-1914.geojson  pyproject.toml  risk-map.ipynb  tmp-Asburgici.geojson  tmp-Deutschland.geojson  tmp-France.geojson  tmp-Indipendenti.geojson  tmp-Italia.geojson  tmp-Neutrali.geojson  tmp-Ottomano.geojson  tmp-Pietroburgo.geojson  tmp-Russia.geojson  tmp-Ucraina.geojson  tmp-United Kingdom.geojson  tmp-UnitedKingdom.geojson  urss.geojson
.github/workflows/: pages.yml
data/geojson/: germany-1880.geojson  germany-1914.geojson  map-Galizia.geojson  map-Serbia.geojson  map-Ucraina.geojson  map-Ungheria.geojson  osm-103906.geojson  osm-130957.geojson  osm-130969.geojson  tmp-Albania.geojson  tmp-Sarajevo.geojson
mappe/: __init__.py  __main__.py  constants.py  geoutil.py  test_mappe.py  utils.py
tests/: test_mappe.py  test_state.py
