[tool.poetry]
name = "europe-historical-geojson"
version = "0.1.0"
description = "Europe historical map for table games."
authors = ["Roberto Polli <robipolli@gmail.com>"]
license = "BSD3"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
requests-cache = "^0.8.1"
Shapely = "^1.7.1"
pandas = "^1.3.3"
numpy = "^1.21.2"
matplotlib = "^3.4.3"
geopandas = "^0.9.0"
jupyter = "^1.0.0"
ipython = "^7.28.0"
PyYAML = "^5.4.1"
contextily = "^1.1.0"
pygeos = "^0.10.2"
Rtree = "^0.9.7"
PyQt5 = "^5.15.4"
click = "^8.0.3"
pytest = "^7.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
